...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <EditText
                android:id="@+id/et_EventName"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="10"
                android:hint="@string/meetup_creation_meetup_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_Description"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/meetup_creation_meetup_description"
                android:inputType="textMultiLine" />
...
                android:id="@+id/tv_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_icon" />

            <Button
                android:id="@+id/bt_locationSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_select_location" />

            <TextView
                android:id="@+id/tv_location"
...
                    <Button
                        android:id="@+id/bt_SelectIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_icon" />
                    <Button
                        android:id="@+id/criterionsSelectButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/criterion_select" />

                        <Button
                            android:id="@+id/bt_SelectMarker"
...
                    android:id="@+id/tv_StartDateLabel"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/meetup_creation_meetup_start_date" />

                <TextView
                    android:id="@+id/tv_StartDate"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/date_long_format"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>
...
                    android:id="@+id/tv_EndDateLabel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/meetup_creation_meetup_end_date" />

                <TextView
                    android:id="@+id/tv_EndDate"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/date_long_format" />
            </LinearLayout>

            <View
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/hasCapacityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="@string/limit_people" />

                <EditText
                    android:id="@+id/et_Capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/meetup_creation_meetup_entries"
                    android:inputType="numberSigned"
                    android:autofillHints="" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_Done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetup_creation_meetup_done" />

        </LinearLayout>
    </ScrollView>
...
