...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/minValueAge"
                android:layout_width="45dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_normal"
                android:text="@string/criterions_age_min"
                android:textSize="20sp" />
...
                android:valueTo="@string/criterions_age_max"
                app:values="@array/initial_values">

            </com.google.android.material.slider.RangeSlider>

            <TextView
                android:id="@+id/maxValueAge"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_normal"
                android:gravity="left"
                android:text="@string/criterions_age_max_plus"
                android:textSize="20sp" />
...
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_female"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/fredoka_normal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioMaleAndFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/fredoka_normal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/radio_male_and_female"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/criterionButtonDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/criterion_confirm" />

...
