...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <SearchView
        android:id="@+id/tag_selector_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tag_selector_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:padding="8dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/add_tag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tags" />
</LinearLayout>
