...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/tags_repo">

        <TextView
            android:id="@+id/tv_add_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/fredoka_normal"
            android:text="@string/add_tags_click"
            android:textSize="16sp"
            android:layout_margin="12dp"
            android:textColor="@color/color_opaque"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tag_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:visibility="gone">

        </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/addTagButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/circle_shape"
            android:backgroundTint="@color/color_opaque"
...
